prototype: gen_slr_table.cpp

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,9 @@
 	"recommendations": [
 		"ms-python.black-formatter",
 		"ms-python.vscode-pylance",
-		"ms-python.python"
+		"ms-python.python",
+		"ms-vscode.cpptools",
+		"ms-vscode.cpptools-themes"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
